// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSONRPCClient getBestBlockHash 1`] = `
Array [
  Array [
    Object {
      "method": "getbestblockhash",
    },
  ],
]
`;

exports[`JSONRPCClient getBlock - hash 1`] = `
Array [
  Array [
    Object {
      "method": "getblock",
      "params": Array [
        "0xb50034d97ba8c836758de1124b6c77d38bc772abc9a8f22c85e7389014e75234",
        1,
      ],
      "watchTimeoutMS": undefined,
    },
  ],
]
`;

exports[`JSONRPCClient getBlock - index 1`] = `
Array [
  Array [
    Object {
      "method": "getblock",
      "params": Array [
        10,
        1,
      ],
      "watchTimeoutMS": 1000,
    },
  ],
]
`;

exports[`JSONRPCClient getBlockCount 1`] = `
Array [
  Array [
    Object {
      "method": "getblockcount",
    },
  ],
]
`;

exports[`JSONRPCClient getBlockHash 1`] = `
Array [
  Array [
    Object {
      "method": "getblockhash",
      "params": Array [
        10,
      ],
    },
  ],
]
`;

exports[`JSONRPCClient getBlockHeader - hash 1`] = `
Array [
  Array [
    Object {
      "method": "getblockheader",
      "params": Array [
        "0xb50034d97ba8c836758de1124b6c77d38bc772abc9a8f22c85e7389014e75234",
        1,
      ],
      "watchTimeoutMS": undefined,
    },
  ],
]
`;

exports[`JSONRPCClient getBlockHeader - index 1`] = `
Array [
  Array [
    Object {
      "method": "getblockheader",
      "params": Array [
        10,
        1,
      ],
      "watchTimeoutMS": 1000,
    },
  ],
]
`;

exports[`JSONRPCClient getBlockSysFee 1`] = `
Array [
  Array [
    Object {
      "method": "getblocksysfee",
      "params": Array [
        10,
      ],
    },
  ],
]
`;

exports[`JSONRPCClient getConnectedPeers 1`] = `
Array [
  Array [
    Object {
      "method": "getpeers",
    },
  ],
]
`;

exports[`JSONRPCClient getConnectionCount 1`] = `
Array [
  Array [
    Object {
      "method": "getconnectioncount",
    },
  ],
]
`;

exports[`JSONRPCClient getContract 1`] = `
Array [
  Array [
    Object {
      "method": "getcontractstate",
      "params": Array [
        "0xcef0c0fdcfe7838eff6ff104f9cdec2922297537",
      ],
    },
  ],
]
`;

exports[`JSONRPCClient getMemPool 1`] = `
Array [
  Array [
    Object {
      "method": "getrawmempool",
    },
  ],
]
`;

exports[`JSONRPCClient getStorage 1`] = `
Array [
  Array [
    Object {
      "method": "getstorage",
      "params": Array [
        "0xcef0c0fdcfe7838eff6ff104f9cdec2922297537",
        "5f8d70",
      ],
    },
  ],
]
`;

exports[`JSONRPCClient getTransaction 1`] = `
Array [
  Array [
    Object {
      "method": "getrawtransaction",
      "params": Array [
        "0xb50034d97ba8c836758de1124b6c77d38bc772abc9a8f22c85e7389014e75234",
        1,
      ],
      "watchTimeoutMS": 1000,
    },
  ],
]
`;

exports[`JSONRPCClient getTransactionHeight 1`] = `
Array [
  Array [
    Object {
      "method": "gettransactionheight",
      "params": Array [
        "0xb50034d97ba8c836758de1124b6c77d38bc772abc9a8f22c85e7389014e75234",
      ],
    },
  ],
]
`;

exports[`JSONRPCClient getValidators 1`] = `
Array [
  Array [
    Object {
      "method": "getvalidators",
    },
  ],
]
`;

exports[`JSONRPCClient getVersion 1`] = `
Array [
  Array [
    Object {
      "method": "getversion",
    },
  ],
]
`;

exports[`JSONRPCClient invokeFunction 1`] = `
Array [
  Array [
    Object {
      "method": "invokefunction",
      "params": Array [
        "0xcef0c0fdcfe7838eff6ff104f9cdec2922297537",
        "balanceOf",
        Array [
          Object {
            "name": "param",
            "type": "Hash160",
            "value": "ALfnhLg7rUyL6Jr98bzzoxz5J7m64fbR4s",
          },
        ],
      ],
    },
  ],
]
`;

exports[`JSONRPCClient invokeScript 1`] = `
Array [
  Array [
    Object {
      "method": "invokescript",
      "params": Array [
        "b500",
      ],
    },
  ],
]
`;

exports[`JSONRPCClient listPlugins 1`] = `
Array [
  Array [
    Object {
      "method": "listplugins",
    },
  ],
]
`;

exports[`JSONRPCClient sendTransaction - other error 1`] = `
Array [
  Array [
    Object {
      "method": "sendrawtransaction",
      "params": Array [
        "b500",
      ],
      "watchTimeoutMS": undefined,
    },
  ],
]
`;

exports[`JSONRPCClient sendTransaction - relay error 1`] = `
Array [
  Array [
    Object {
      "method": "sendrawtransaction",
      "params": Array [
        "b500",
      ],
      "watchTimeoutMS": undefined,
    },
  ],
]
`;

exports[`JSONRPCClient sendTransaction 1`] = `
Array [
  Array [
    Object {
      "method": "sendrawtransaction",
      "params": Array [
        "b500",
      ],
      "watchTimeoutMS": undefined,
    },
  ],
]
`;
